<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  >

  <data>
    <variable
      name="viewModel"
      type="com.mina_mikhail.base_mvvm.presentation.competitions.competition_details.teams.team_details.TeamDetailsViewModel"
      />

    <variable
      name="team"
      type="com.mina_mikhail.base_mvvm.domain.competitions.entity.model.Team"
      />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGray"
    android:orientation="vertical"
    >

    <include
      android:id="@+id/included_toolbar"
      layout="@layout/toolbar_transparent"
      />

    <include
      android:id="@+id/content_general"
      layout="@layout/content_general"
      />

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:fillViewport="true"
      android:scrollbars="none"
      >

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        >

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          >

          <ImageView
            android:layout_width="@dimen/dimen70"
            android:layout_height="@dimen/dimen70"
            android:layout_marginEnd="@dimen/dimen10"
            android:scaleType="centerCrop"
            app:loadImage="@{team.crestUrl}"
            tools:ignore="ContentDescription"
            tools:src="@color/backgroundGray"
            />

          <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:maxLines="1"
              android:text="@{team.shortName}"
              android:textAlignment="viewStart"
              android:textColor="@color/colorPrimaryDark"
              android:textSize="@dimen/text_size12"
              tools:text="Short Name"
              />

            <TextView
              style="@style/TextMediumFont"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:maxLines="2"
              android:text="@{team.name}"
              android:textAlignment="viewStart"
              android:textColor="@color/colorAccent"
              tools:text="Team Name"
              />

          </LinearLayout>

        </LinearLayout>

        <TextView
          style="@style/TextMediumFont"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dimen10"
          android:text="@string/area"
          android:textColor="@color/colorAccent"
          android:textSize="@dimen/text_size13"
          />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@{team.area.name}"
          android:textAlignment="viewStart"
          android:textColor="@color/black"
          tools:text="Cairo"
          />

        <TextView
          style="@style/TextMediumFont"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dimen10"
          android:text="@string/address"
          android:textColor="@color/colorAccent"
          android:textSize="@dimen/text_size13"
          />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@{team.address}"
          android:textAlignment="viewStart"
          android:textColor="@color/black"
          tools:text="Team Address"
          />

        <TextView
          style="@style/TextMediumFont"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dimen10"
          android:text="@string/club_colors"
          android:textColor="@color/colorAccent"
          android:textSize="@dimen/text_size13"
          />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@{team.clubColors}"
          android:textAlignment="viewStart"
          android:textColor="@color/black"
          tools:text="Colors"
          />

        <TextView
          style="@style/TextMediumFont"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dimen10"
          android:text="@string/team_players"
          android:textColor="@color/colorAccent"
          android:textSize="@dimen/text_size14"
          />

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recycler_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:clipToPadding="false"
          android:orientation="vertical"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          tools:listitem="@layout/item_player"
          />

      </LinearLayout>

    </androidx.core.widget.NestedScrollView>

  </LinearLayout>

</layout>